--- a/FSLC-p2.html
+++ b/FSLC-p2.html
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/post-bg.jpg')">
+    <header class="masthead" style="background-image: url('img/lasers.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -324,9 +324,13 @@
 
 
             
-            <p>Placeholder text by
+            <!--<p>Placeholder text by
               <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by
-              <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>.</p>
+              <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>.</p>-->
+
+              <div class="clearfix">
+            <a class="btn btn-primary float-left" href="FSLC-p1.html">&larr; View Part 1 </a>
+          </div>
           </div>
         </div>
       </div>
@@ -335,7 +339,7 @@
     <hr>
 
     <!-- Footer -->
-    <footer>
+    <!--<footer>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
@@ -369,7 +373,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer>-->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
