--- a/FSLC-p1.html
+++ b/FSLC-p1.html
@@ -75,6 +75,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
+            <div class="clearfix">
+            <a class="btn btn-primary float-right" href="FSLC-p2.html">View Part 2 &rarr;</a>
+          </div>
             <h2 class="section-heading">Media Links:</h2>
             <a href=""><p><b>TedxKids Talk</b> - "The True Lessons From My Science Projects - Devika Vishwanath"</p></a>
 
