--- a/FSLC-p1.html
+++ b/FSLC-p1.html
@@ -78,7 +78,7 @@
             <div class="clearfix">
             <a class="btn btn-primary float-right" href="FSLC-p2.html">View Part 2 &rarr;</a>
           </div>
-            <h2 class="section-heading">Media:</h2>
+            <h2 class="section-heading">Media Links:</h2>
             <a href="https://www.youtube.com/watch?v=k8YU2Y2Jrfc"><p><b>TedxKids Talk</b> - "The True Lessons From My Science Projects - Devika Vishwanath"</p></a>
 
 
