Removed one picture

--- a/ChemECar Electrical Team.html
+++ b/ChemECar Electrical Team.html
@@ -198,12 +198,12 @@
 
             <p>When this valve was manually opened, the car needed to begin moving. To provide this signal to the car, we used a photogate. The ball valve handle was placed between the photogate, and when pulled it cleared the photogate's path, therefore signalling to the Arduino that the car needed to begin.</p>
 
-            <div class="text-center">
+           <!-- <div class="text-center">
               <a href="#">
               <img class="img-fluid" src="img/chemecar/batteryCase.jpg" alt="" height="50%" width="50%">
             </a>
             <span class="caption text-muted">Photogate</span>
-            </div>   
+            </div>   -->
 
             <h2 class="section-heading">Mixing the Solution:</h2>
             <p>The iodine clock solution needed to be continuously stirred in order to ensure maximum accuracy. Since lab stirring rods are magnetic, this was easy to achieve. A magnetic stirring rod was connected to a 3V CD Motor, which was powered externally using a lithium CR2032 battery. A 3D printed part capable of holding a stir-rod, was connected to the motor shaft. A second stir-rod was placed inside the beaker. The motor was placed in a compartment underneath the mixing beaker. Therefore, since the stir-rods were magnetic, when the motor rod spun, this allowed for the rod within the beaker to spin along with it.</p>
