Image names are Case sensitive on github pages

--- a/ChemECar Electrical Team.html
+++ b/ChemECar Electrical Team.html
@@ -104,7 +104,7 @@
             <br>
             <div class="text-center">
               <a href="#">
-              <img class="img-fluid" src="img/chemecar/batterylayers.jpg" >
+              <img class="img-fluid" src="img/chemecar/batterylayers.JPG" >
             </a>
             <span class="caption text-muted">Battery Cell Design</span>
             </div>    
@@ -113,7 +113,7 @@
 
                <div class="text-center">
               <a href="#">
-              <img class="img-fluid" src="img/chemecar/batteryCase.jpg" alt="" height="50%" width="50%">
+              <img class="img-fluid" src="img/chemecar/BatteryCase.JPG" alt="" height="50%" width="50%">
             </a>
             <span class="caption text-muted">Battery Casing Design</span>
             </div>   
@@ -158,7 +158,7 @@
 
             <div class="text-center">
               <a href="#">
-              <img class="img-fluid" src="img/chemecar/solarcellset-up.jpg" alt="">
+              <img class="img-fluid" src="img/chemecar/solarcellset-up.JPG" alt="">
             </a>
             <span class="caption text-muted">Sensor Set up</span>
             </div>  
@@ -175,7 +175,7 @@
 
             <div class="text-center">
               <a href="#">
-                <img class="img-fluid" src="img/chemecar/motor_driver_circuit.jpg" alt="">
+                <img class="img-fluid" src="img/chemecar/motor_driver_circuit.JPG" alt="">
               </a>
             <span class="caption text-muted">Motor Driver Schematic</span>
             </div>  
@@ -189,7 +189,7 @@
 
             <div class="text-center">
               <a href="#">
-                <img class="img-fluid" src="img/chemecar/solenoid valve circuit.jpg" alt="">
+                <img class="img-fluid" src="img/chemecar/solenoid valve circuit.JPG" alt="">
               </a>
             <span class="caption text-muted">Solenoid Valve</span>
             </div>  
@@ -210,7 +210,7 @@
             
             <div class="text-center">
               <a href="#">
-                <img class="img-fluid" src="img/chemecar/motor housing.jpg" alt="" height="70%" width="70%">
+                <img class="img-fluid" src="img/chemecar/motor housing.JPG" alt="" height="70%" width="70%">
               </a>
             <span class="caption text-muted">The Motor Vessel Part of the Reaction Vessel</span>
             </div>  
