--- a/FSLC-p2.html
+++ b/FSLC-p2.html
@@ -289,7 +289,7 @@
 
             <div class="text-center">
               <a href="#">
-              <img class="img-fluid" src="img/FinalCircuitPWM - Copy2.jpg" alt="" >
+              <img class="img-fluid" src="img/FinalCircuitPWM - Copy2.JPG" alt="" >
               </a>
               <span class="caption text-muted">Final Circuit Design</span>
             </div>
