case sensitive fixes for fslc - part 2

--- a/FSLC-p2.html
+++ b/FSLC-p2.html
@@ -197,7 +197,7 @@
 
             <div class="text-center">
               <a href="#">
-              <img class="img-fluid" src="img/dcCompOutput.jpg" alt="">
+              <img class="img-fluid" src="img/dcCompOutput.JPG" alt="">
               </a>
               <span class="caption text-muted"></span>
             </div>
@@ -206,7 +206,7 @@
 
             <div class="text-center">
               <a href="#">
-              <img class="img-fluid" src="img/AmpFactors.jpg" alt="">
+              <img class="img-fluid" src="img/AmpFactors.JPG" alt="">
               </a>
               <span class="caption text-muted"></span>
             </div>
@@ -222,7 +222,7 @@
 
             <div class="text-center">
               <a href="#">
-              <img class="img-fluid" src="img/DifferentialAmpDesign.jpg" alt="">
+              <img class="img-fluid" src="img/differentialAmpDesign.jpg" alt="">
               </a>
               <span class="caption text-muted">LM741 Differential Amplifier Design</span>
             </div>
