case sensitive images on dispersion file

--- a/Dispersion.html
+++ b/Dispersion.html
@@ -141,7 +141,7 @@
 
             <div class="text-center">
               <a href="#">
-              <img class="img-fluid" src="img/dispersion/table1.jpg" alt="">
+              <img class="img-fluid" src="img/dispersion/table1.JPG" alt="">
               </a>
               <span class="caption text-muted"></span>
             </div>  
@@ -151,7 +151,7 @@
 
             <div class="text-center">
               <a href="#">
-              <img class="img-fluid" src="img/dispersion/graph1.jpg" alt="">
+              <img class="img-fluid" src="img/dispersion/graph1.JPG" alt="">
               </a>
               <span class="caption text-muted"></span>
             </div>     
@@ -195,7 +195,7 @@
 
           <div class="text-center">
               <a href="#">
-              <img class="img-fluid" src="img/dispersion/table2.jpg" alt="">
+              <img class="img-fluid" src="img/dispersion/table2.JPG" alt="">
               </a>
               <span class="caption text-muted"></span>
             </div>  
@@ -204,7 +204,7 @@
 
           <div class="text-center">
               <a href="#">
-              <img class="img-fluid" src="img/dispersion/graph2.jpg" alt="">
+              <img class="img-fluid" src="img/dispersion/graph2.JPG" alt="">
               </a>
               <span class="caption text-muted"></span>
             </div>
@@ -346,7 +346,7 @@
 
             <div class="text-center">
               <a href="#">
-              <img class="img-fluid" src="img/dispersion/graph3.jpg" alt="">
+              <img class="img-fluid" src="img/dispersion/graph3.JPG" alt="">
               </a>
               <span class="caption text-muted">(The above graph is exponential, however seems linear due to small coefficient (4.46 x 10<sup>-26</sup>) and the interval size)</span>
             </div>
