--- a/FSLC-p1.html
+++ b/FSLC-p1.html
@@ -115,7 +115,7 @@
 
             <div class="text-center">
               <a href="#">
-              <img class="img-fluid" src="img/free space laser communication 9.jpg" alt="">
+              <img class="img-fluid" src="img/free space laser communication 9.JPG" alt="">
             </a>
             </div>           
             
