--- a/Graphs.html
+++ b/Graphs.html
@@ -437,7 +437,7 @@
     <hr>
 
     <!-- Footer -->
-    <footer>
+    <!--<footer>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
@@ -471,7 +471,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer>-->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
