--- a/resume.html
+++ b/resume.html
@@ -78,7 +78,7 @@
             
           </div>
             <div class="container">
-              <embed src="Resume Devika Vishwanath.pdf" type="application/pdf" width="100%" height="1000px"/>
+              <embed src="Resume.pdf" type="application/pdf" width="100%" height="1000px"/>
             </div>
     
             <!--<p>Placeholder text by
