Changed from embed to object for resume embedding

--- a/resume.html
+++ b/resume.html
@@ -78,7 +78,8 @@
             
           </div>
             <div class="container">
-              <embed src="Resume.pdf" type="application/pdf" width="100%" height="1000px"/>
+              <!--<embed src="Resume.pdf" type="application/pdf" width="100%" height="1000px"/>-->
+              <object data='Resume.pdf' type='application/pdf' width='100%' height='1000px'></object>
             </div>
     
             <!--<p>Placeholder text by
