--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1 align="left">Project Profile</h1>
+              <h1 align="left">PROJECT PROFILE</h1>
               <span class="subheading" align="left">Devika Vishwanath</span>
             </div>
           </div>
