Added Refracting Rays project

--- a/FSLC-p1.html
+++ b/FSLC-p1.html
@@ -78,6 +78,7 @@
             <div class="clearfix">
             <a class="btn btn-primary float-right" href="FSLC-p2.html">View Part 2 &rarr;</a>
           </div>
+
             <h2 class="section-heading">Media Links:</h2>
             <a href="https://www.youtube.com/watch?v=k8YU2Y2Jrfc"><p><b>TedxKids Talk</b> - "The True Lessons From My Science Projects - Devika Vishwanath"</p></a>
 
@@ -90,6 +91,14 @@
             <a href="https://www.bclocalnews.com/life/students-showcase-science-smarts/"><p><b>BC Local/Surrey Now Leader:</b> https://www.bclocalnews.com/life/students-showcase-science-smarts/</p></a>
 
             <a href="https://secure.youthscience.ca/virtualcwsf/projectdetails.php?id=4076&"><p><b>CWSF Youth Science:</b> https://secure.youthscience.ca/virtualcwsf/projectdetails.php?id=4076&</p></a>
+
+            <h2 class="section-heading">Awards:</h2>
+            <ul>
+              <li>Bronze Medal at 2014 Canada Wide National Science Fair (CWSF)</li>
+              <li>Gold Medal at 2014 South Fraser Regional Science Fair</li>
+              <li></li>
+            </ul>
+            
 
             <h2 class="section-heading">Introduction</h2>
 
