--- a/Refraction.html
+++ b/Refraction.html
@@ -69,14 +69,14 @@
       </div>
     </header>
 
-    <h2>Introduction</h2>
-    <p>I completed this physics project at home at the age of 13. It won me a bronze medal at the Canada Wide National Science Fair in 2013.</p>
-
+   
     <!-- Post Content -->
     <article>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
+            <!--<h2 class="section-heading">Introduction</h2>
+            <p></p>-->
             <div class="clearfix">
             
           </div>
